--- a/RickAndMorty/app/src/main/res/layout/fragment_cartoon_character_detail.xml
+++ b/RickAndMorty/app/src/main/res/layout/fragment_cartoon_character_detail.xml
@@ -43,78 +43,90 @@
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginEnd="32dp"
+                android:fontFamily="@font/basic"
                 android:text="@{@string/name_formatted(cartoonCharacter.name)}"
-                android:textColor="@color/purple_500"
+                android:textColor="@color/primary_variant_color"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/detail_characterImage" />
+                app:layout_constraintTop_toBottomOf="@+id/detail_characterImage"
+                tools:text="Character Name" />
 
             <TextView
                 android:id="@+id/detail_characterLocation"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/basic"
                 android:text="@{@string/location_formatted(cartoonCharacter.origin.name)}"
-                android:textColor="@color/purple_500"
+                android:textColor="@color/primary_variant_color"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/detail_characterName"
                 app:layout_constraintStart_toStartOf="@+id/detail_characterName"
-                app:layout_constraintTop_toBottomOf="@+id/detail_characterName" />
+                app:layout_constraintTop_toBottomOf="@+id/detail_characterName"
+                tools:text="Location" />
 
             <TextView
                 android:id="@+id/detail_characterStatus"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/basic"
                 android:text="@{@string/status_formatted(cartoonCharacter.status)}"
-                android:textColor="@color/purple_500"
+                android:textColor="@color/primary_variant_color"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/detail_characterName"
                 app:layout_constraintStart_toStartOf="@+id/detail_characterName"
-                app:layout_constraintTop_toBottomOf="@+id/detail_characterLocation" />
+                app:layout_constraintTop_toBottomOf="@+id/detail_characterLocation"
+                tools:text="Life Status" />
 
             <TextView
                 android:id="@+id/detail_characterSpecies"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/basic"
                 android:text="@{@string/species_formatted(cartoonCharacter.species)}"
-                android:textColor="@color/purple_500"
+                android:textColor="@color/primary_variant_color"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/detail_characterName"
                 app:layout_constraintStart_toStartOf="@+id/detail_characterName"
-                app:layout_constraintTop_toBottomOf="@+id/detail_characterStatus" />
+                app:layout_constraintTop_toBottomOf="@+id/detail_characterStatus"
+                tools:text="Species" />
 
             <TextView
                 android:id="@+id/detail_characterGender"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/basic"
                 android:text="@{@string/gender_formatted(cartoonCharacter.gender)}"
-                android:textColor="@color/purple_500"
+                android:textColor="@color/primary_variant_color"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/detail_characterName"
                 app:layout_constraintStart_toStartOf="@+id/detail_characterName"
-                app:layout_constraintTop_toBottomOf="@+id/detail_characterSpecies" />
+                app:layout_constraintTop_toBottomOf="@+id/detail_characterSpecies"
+                tools:text="Gender" />
 
             <TextView
                 android:id="@+id/detail_characterCreated"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
+                android:fontFamily="@font/basic"
                 android:text="@{@string/created_formatted(viewModel.getFormattedDate(cartoonCharacter.created))}"
-                android:textColor="@color/purple_500"
+                android:textColor="@color/primary_variant_color"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="@+id/detail_characterName"
                 app:layout_constraintStart_toStartOf="@+id/detail_characterName"
-                app:layout_constraintTop_toBottomOf="@+id/detail_characterGender" />
+                app:layout_constraintTop_toBottomOf="@+id/detail_characterGender"
+                tools:text="Created at" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </layout>
