--- a/RickAndMorty/app/src/main/res/layout/cartoon_character_list_row.xml
+++ b/RickAndMorty/app/src/main/res/layout/cartoon_character_list_row.xml
@@ -57,13 +57,15 @@
                     android:layout_marginEnd="20dp"
                     android:ellipsize="end"
                     android:ems="8"
+                    android:fontFamily="@font/basic"
                     android:text="@{cartoonCharacterItem.name}"
-                    android:textColor="@color/purple_700"
+                    android:textColor="@color/primary_variant_color"
                     android:textSize="24sp"
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/cartoon_character_image"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Character Name" />
 
                 <TextView
                     android:id="@+id/cartoon_character_status"
@@ -73,13 +75,16 @@
                     android:layout_marginEnd="20dp"
                     android:ellipsize="end"
                     android:ems="8"
+                    android:fontFamily="@font/basic"
                     android:lifeStatusColor="@{cartoonCharacterItem.lifeStatus}"
                     android:text="@{cartoonCharacterItem.status}"
+                    android:textColor="@color/primary_variant_color"
                     android:textSize="20sp"
                     android:textStyle="italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/cartoon_character_name"
-                    app:layout_constraintTop_toBottomOf="@+id/cartoon_character_name" />
+                    app:layout_constraintTop_toBottomOf="@+id/cartoon_character_name"
+                    tools:text="Life Status" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
