--- a/RickAndMorty/app/src/main/res/menu/update_menu.xml
+++ b/RickAndMorty/app/src/main/res/menu/update_menu.xml
@@ -3,8 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/ac_competition"
+        android:icon="@drawable/ic_baseline_timer_24"
+        android:title="@string/competition"
+        app:showAsAction="ifRoom" />
+
+    <item
         android:id="@+id/ac_update"
         android:icon="@drawable/ic_baseline_update_24"
-        android:title="Update"
+        android:title="@string/update"
         app:showAsAction="always" />
+
 </menu>
