--- a/RickAndMorty/app/src/main/res/layout/fragment_competition.xml
+++ b/RickAndMorty/app/src/main/res/layout/fragment_competition.xml
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/check"
+                android:text="@string/next"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
